# seqlgbm

./: README.md
Protsol/SEQL/: config.json
Protsol/SEQLGBM/: config.json
Protsol/SFSEQL/: config.json
Protsol/SFSEQLGBM/: config.json
Protsol/data/: test.SF.seql  test.seql  val.seql
UCR/SAXSEQL/: config.cfg.json
UCR/SAXSEQLGBM/: config.cfg.json
UCR/SFSEQL/: config.cfg.json
UCR/SFSEQLGBM/: config.cfg.json
UCR/results/: UCR_all_SEQLGBM_results.csv
UCR/scripts/: GLM_TS.r  collect_results.py  run_all.py  tim.py  tsv2csv.sh
UCR/scripts/matlab/: svg_getFeatures.m  svg_get_sf.m  svg_get_sf_zs.m
seql/: CMakeLists.txt
seql/src/: CLI11.hpp  CMakeLists.txt  basic_symbol.h  common.h  csv_writer.h  darts.h  evaluation.cpp  evaluation.h  helper.h  linear_model.cpp  linear_model.h  optimizer.cpp  optimizer.h  preprocessing.cpp  preprocessing.h  search_node.cpp  search_node.h  seql.cpp  seql.h  seql_boost.cpp  seql_boost.h  seql_classifier.h  seql_learn.cpp  seql_learn.h  seqlr.cpp  thread_pool.h  thread_safe_queue.h
seql/test/: CMakeLists.txt  TestFiles.cmake  a.out  testImp.cpp  test_SNode.cpp  test_evaluation.cpp  test_prediction.cpp  test_preprocessing.cpp  test_representations.cpp  test_seql.cpp  test_seql_learn.cpp  test_tilde.cpp
